--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^4.1.17",
     "joi-browser": "^13.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
