--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Bashour Atrini's Portfolio",
+  "name": "Bashour Atrini's Portfolio",
   "icons": [
     {
-      "src": "creative_logo.ico",
+      "src": "web-dude-white.webp",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "creative-logo.png",
+      "src": "web-dude-white.webp",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "creative-logo.png",
+      "src": "web-dude-white.webp",
       "type": "image/png",
       "sizes": "512x512"
     }
